src/App.css
.mdc-checkbox .mdc-checkbox__native-control:checked ~ .mdc-checkbox__background::before,
.mdc-checkbox .mdc-checkbox__native-control:indeterminate ~ .mdc-checkbox__background::before {
  background-color: #2979ff;
  /* @alternate */
  background-color: var(--mdc-theme-primary, #2979ff);
}
.mdc-checkbox.mdc-checkbox--selected .mdc-checkbox__ripple::before, .mdc-checkbox.mdc-checkbox--selected .mdc-checkbox__ripple::after {
  background-color: #2979ff;
  /* @alternate */
  background-color: var(--mdc-theme-primary, #2979ff);
}

.mdc-checkbox.mdc-ripple-upgraded--background-focused.mdc-checkbox--selected .mdc-checkbox__ripple::before,
.mdc-checkbox.mdc-ripple-upgraded--background-focused.mdc-checkbox--selected .mdc-checkbox__ripple::after {
  background-color: #2979ff;
  /* @alternate */
  background-color: var(--mdc-theme-primary, #2979ff);
}

.mdc-checkbox__native-control:enabled:checked ~ .mdc-checkbox__background,
.mdc-checkbox__native-control:enabled:indeterminate ~ .mdc-checkbox__background {
  border-color: #2979ff;
  /* @alternate */
  border-color: var(--mdc-theme-primary, #2979ff);
  background-color: #2979ff;
  /* @alternate */
  background-color: var(--mdc-theme-primary, #2979ff);
}

.mdc-snackbar--leading {
  justify-content: flex-end;
}
.mdc-snackbar {
  right: 8px;
  bottom: 40px;
  left: 8px;
}
.mdc-snackbar__label, [dir=rtl] .mdc-snackbar__label {
  padding: 0;
}
.mdc-snackbar__surface, [dir=rtl] .mdc-snackbar__surface {
  padding: 0;
}
.mdc-snackbar__action:not(:disabled) {
    color: var(--mdc-theme-primary, #2979ff);;
}

.app-container {
  background-color: var(--mdc-theme-background);
  color: var(--mdc-theme-on-surface);
  overflow: hidden;
  --side-panel-width: 28%;
}

.glow-missing-icon {
  /* animation: glow 1s ease-in-out infinite alternate; */
}

.cesium-infoBox-visible {
  transform: unset;
}

.cesium-infoBox-close {
  background: transparent;
  width: 20px;
  height: 20px;
  background-color: transparent;
  font-size: 18px;
}

button.cesium-infoBox-close:hover {
  background: transparent;
  color: unset;
  cursor: pointer;
}

.cesium-infoBox {
  transform: unset;
  top: 60px;
  right: 8px;
  left: unset;
}

[dir=rtl] .cesium-infoBox {
  right: unset;
  left: 8px;
}

.cesium-infoBox-title {
  background-color: var(--mdc-theme-alternative-surface);
  display: flex;
  justify-content: space-evenly;
}

[dir=rtl] .cesium-infoBox-title {
  direction: ltr;
}

.appLogoContainer {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 10px;
  margin: 20px;
  flex-direction: row-reverse;
  width: 185px;
}

.appIcon {
  font-size: 2rem;
}

.appTitleVersionContainer {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
}

.appVersionContainer-master {
  color: var(--mdc-theme-gc-site-master);
}

.appVersionContainer-slave {
  color:  var(--mdc-theme-gc-site-slave);
}

title.rtl {
  direction: rtl;
}

title.ltr {
  direction: ltr;
}

.react-datepicker__close-icon {
  padding: 0px 8px;
}

body[dir='rtl'] .react-datepicker__close-icon {
  right: unset;
  left: 8px;
}

body[dir='ltr'] .react-datepicker__close-icon {
  right: 8px;
  left: unset;
}

@keyframes glow {
  from {
    text-shadow: 0 0 10px #fff, 0 0 12px #fff, 0 0 14px #e60073, 0 0 18px #e60073, 0 0 20px #e60073;
  }
  to {
    text-shadow: 0 0 12px #fff, 0 0 14px #ff4da6, 0 0 16px #ff4da6, 0 0 18px #ff4da6, 0 0 20px #ff4da6, 0 0 22px #ff4da6;
  }
}

input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

input:-webkit-autofill,
input:-webkit-autofill:hover, 
input:-webkit-autofill:focus, 
input:-webkit-autofill:active {
  -webkit-box-shadow: 0 0 0 30px var(--mdc-theme-alternative-surface) inset !important;
}
input:-webkit-autofill {
  -webkit-text-fill-color: white !important;
}

input::placeholder {
  font-size: 14px;
  line-height: 2;
}

input:disabled {
  background-color: var(--mdc-theme-text-disabled-on-light);
  opacity: 0.7;
}

.mdc-checkbox.mdc-checkbox--disabled > input[type='checkbox']:disabled {
  opacity: 0;
}

.mdc-checkbox.mdc-checkbox--disabled ~ label {
  opacity: 0.3;
}

@keyframes fadeIn {
  from {
    opacity: 0;
    transform: translateY(-10px);
  }
  to {
    opacity: 1;
    transform: translateY(0);
  }
}

.mdc-checkbox .mdc-checkbox__native-control:enabled:not(:checked):not(:indeterminate):not([data-indeterminate=true]) ~ .mdc-checkbox__background {
  border: 1px solid var(--mdc-theme-on-surface);
}

